# conductore

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  conductor.yml
crates/conductor-bridge/: Cargo.toml
crates/conductor-bridge/src/: lib.rs  parse.rs  session.rs  validate.rs
crates/conductor-cli/: Cargo.toml
crates/conductor-cli/src/: main.rs
crates/conductor-core/: Cargo.toml
crates/conductor-core/src/: caffeinate.rs  conductor_agent.rs  dag.rs  insights.rs  lib.rs  memory.rs  musician.rs  orchestra.rs  prompt_history.rs  rate_limiter.rs  task_store.rs  token_estimate.rs  tool_summary.rs  worktree_manager.rs
crates/conductor-tui/: Cargo.toml
crates/conductor-tui/src/: app.rs  layout.rs  lib.rs  theme.rs  widgets.rs
crates/conductor-tui/src/components/: analyst.rs  conductor.rs  header.rs  input.rs  insights.rs  mod.rs  musician.rs  panels.rs  status.rs
crates/conductor-types/: Cargo.toml
crates/conductor-types/src/: events.rs  image_utils.rs  lib.rs  state.rs
docs/: ARCHITECTURE.md  REWRITE_PLAYBOOK.md
docs/plans/: tui-v2-structured-output.md  tui-v2-tab-architecture.md
docs/research/: builtin-widgets.md  community-crates.md  tui-design-analysis.md
