[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Encoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Workspace crates
conductor-types = { path = "crates/conductor-types" }
conductor-bridge = { path = "crates/conductor-bridge" }
conductor-core = { path = "crates/conductor-core" }
conductor-tui = { path = "crates/conductor-tui" }
