[package]
name = "conductor-core"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-types.workspace = true
conductor-bridge.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
